# Dissertation

./: .gitignore  README.md  analyse_all_approaches.py  analyse_dissertation.py  extract_ground_truth.py
code/: analyse_attack.py  analyse_attacks.py  analyse_ekf_comparison.py  attack_test.py  capture_sybil.py  cooperative_localisation.py  ground_truth_demux.py  inter_drone_ranging.py  px4_offboard_hover.py  px4_position_listener.py  px4_spoof_position.py  record_baseline.py  replay_attack.py  sybil_ghost_attack.py
evidence/: 5drone_replay_20260609_154847.csv  5drone_sybil_20260609_154601.csv  5drone_wormhole_20260609_155039.csv  replay_attack_20260609_135147.csv  sybil_attack_20260609_132917.csv  wormhole_attack_20260609_135459.csv
logs/: attack2_results.txt
ros_ws/px4_ros_ws/src/swarm_discovery/: package.xml  setup.cfg  setup.py
ros_ws/px4_ros_ws/src/swarm_discovery/swarm_discovery/: coop_loc_ekf_chi2_huber.py  coop_loc_logger.py  coop_loc_ransac.py  coop_loc_wls_huber.py  coop_loc_wls_tukey.py  cooperative_localisation_dynamic.py  cooperative_localisation_ekf.py  replay_attack.py  swarm_client.py  swarm_heartbeat.py  swarm_registry.py  swarm_registry_service.py  swarm_viz.py  sybil_registry_attack.py  sybil_service_attack.py  wormhole_attack.py
ros_ws/px4_ros_ws/src/swarm_msgs/: CMakeLists.txt  package.xml
ros_ws/px4_ros_ws/src/swarm_msgs/msg/: SwarmMember.msg  SwarmRegistry.msg
ros_ws/px4_ros_ws/src/swarm_msgs/srv/: Keepalive.srv  RegisterDrone.srv
scripts/: launch_ekf.sh  launch_mitigation.sh  launch_stack.sh  launch_stack_service.sh  launch_wls.sh  (+4 more)
(+152 files in other folders)
