<?xml version="1.0"?>
<package format="3">
  <name>swarm_msgs</name>
  <version>0.1.0</version>
  <description>Custom ROS 2 messages for swarm security testbed</description>
  <maintainer email="se25272@bristol.ac.uk">Ashwin Kotharamath</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
